fix(style): changes the background style of the header. Tracks: https://github.com/openshiftio/openshift.io/issues/3775

--- a/src/app/add-dependency/add-dependency.component.less
+++ b/src/app/add-dependency/add-dependency.component.less
@@ -12,7 +12,6 @@
         font-size: 16px;
         padding: 15px;
         border-bottom: 1px solid #ededed;
-        background: #f5f5f5;
         margin: 0;
         #head-title {
             font-size: 16px;
